--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -9,6 +9,17 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="142dp"
+        android:layout_height="44dp"
+        android:layout_gravity="start"
+        android:padding="16dp"
+        />
+
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,15 +30,19 @@
         android:textSize="30sp"
         android:textStyle="bold" />
 
+
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/text_about_us"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="380dp"
-        android:text="Здраствуйте,мы команда Trackg!
-        Это приложение создано для помощи отслеживания геолокации общественного транспорта.
-        Надеюсь наша команда сможет вам помочь в вашем маршруте. С уважением команда проекта Trackg!"
+        android:layout_marginTop="109dp"
+        android:layout_marginBottom="204dp"
+        android:orientation="horizontal"
+        android:text="@string/text_about_us"
         android:textColor="@color/green"
-        android:textSize="20sp" />
+        android:textSize="25sp" />
+
 
 </RelativeLayout>
