--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -11,7 +11,7 @@
 
 
     <ImageView
-        android:id="@+id/back_button"
+        android:id="@+id/logo_button"
         android:layout_width="142dp"
         android:layout_height="44dp"
         android:layout_gravity="start"
