--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,7 +10,7 @@
             android:icon="@drawable/baseline_home_24"
             android:title="Домой"/>
         <item
-            android:id="@+id/profile"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/baseline_person_24"
             android:title="Личный кабинет"/>
         <item
