--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/logo_page"
-    tools:context=".SignupActivity">
+    tools:context=".activities.SignupActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
