--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -7,4 +7,20 @@
     <item name="secondButton" type="id" />
     <item name="checkbox" type="id" />
     <item name="deleteButton" type="id" />
+    <item name="menu_about" type="id" />
+    <item name="menu_online_buses" type="id" />
+    <item name="menu_update_subscription" type="id" />
+    <item name="checkboxes" type="id" />
+    <item name="menu_reject" type="id" />
+    <item name="menu_delete" type="id" />
+    <item name="menu_pending_requests" type="id" />
+    <item name="menu_change_reg_key" type="id" />
+    <item name="menu_all_teachers" type="id" />
+    <item name="menu_all_passengers" type="id" />
+    <item name="menu_all_buses" type="id" />
+    <item name="cancel_button" type="id" />
+    <item name="profile_pic" type="id" />
+    <item name="itemList" type="id" />
+    <item name="emptyView" type="id" />
+    <item name="next_button" type="id" />
 </resources>
