--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,20 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp"
+    android:layout_height="wrap_content"
+    android:background="@color/green"
+    android:gravity="start"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_medium"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <TextView
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_pic"
+        android:layout_width="@dimen/profile_pic_size"
+        android:layout_height="@dimen/profile_pic_size"
+        android:contentDescription="@string/nav_header_desc"
+        android:src="@drawable/splash_image"
+        app:civ_border_color="@color/green"
+        app:civ_border_width="1dp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/profileName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal"
-        android:text="@string/app_name"
-        android:textColor="@color/green"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:text="@string/nav_header_title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/identityText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/nav_header_subtitle" />
 
 
 </LinearLayout>
