--- a/app/src/main/res/menu/menu_bus_driver.xml
+++ b/app/src/main/res/menu/menu_bus_driver.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/menu_logout"
+        android:icon="@drawable/baseline_logout_24"
+        android:title="@string/logout"
+        app:iconTint="@android:color/white"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_about"
+        android:icon="@drawable/baseline_info_24"
+        android:title="@string/about"
+        app:iconTint="@android:color/white"
+        app:showAsAction="ifRoom" />
 </menu>
