--- a/app/src/main/res/menu/menu_transport_controller.xml
+++ b/app/src/main/res/menu/menu_transport_controller.xml
@@ -1,4 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/menu_online_buses"
+            android:icon="@drawable/baseline_google_maps_24"
+            android:title="@string/online_buses" />
+        <item
+            android:id="@+id/menu_all_buses"
+            android:icon="@drawable/baseline_bus_24"
+            android:title="@string/all_buses" />
+        <item
+            android:id="@+id/menu_all_teachers"
+            android:icon="@drawable/baseline_person_24"
+            android:title="@string/all_passengers" />
+        <item
+            android:id="@+id/menu_pending_requests"
+            android:icon="@drawable/baseline_refresh_24"
+            android:title="@string/pending_requests" />
+    </group>
+    <item android:title="@string/more_options">
+        <menu>
+            <item
+                android:id="@+id/menu_change_reg_key"
+                android:icon="@drawable/baseline_key_24"
+                android:title="@string/change_reg_key" />
+            <item
+                android:id="@+id/menu_logout"
+                android:icon="@drawable/baseline_logout_24"
+                android:title="@string/logout" />
+            <item
+                android:id="@+id/menu_about"
+                android:icon="@drawable/baseline_info_24"
+                android:title="@string/about" />
+        </menu>
+    </item>
 </menu>
